--- a/DiscoveryBDDTest/appsettings.json
+++ b/DiscoveryBDDTest/appsettings.json
@@ -1,5 +1,11 @@
 {
-  "findAnArchive":  "/find-an-archive",
+  "NRARedirects": "/redirect/nra?id=O130952",
+  "A2ARedirects": "/redirect/a2a/?cat=109-mss_1-2_3&cid=2-7",
+  "readerTicketDemoPageUrl": "https://discovery.nationalarchives.gov.uk/readerticketdemo/",
+  "singleSignOnUrl": "https://test-secure.nationalarchives.gov.uk/Login/register",
+  "NRAPdfDownload": "/download/GB%200005%20DEX1958",
+  "manorSearch": "/manor-search",
+  "findAnArchive": "/find-an-archive",
   "pageCheckRequest": "/pagecheck/start/{0}?readertype=offsite",
   "FOIRequest": "/paidsearch/foirequest/{0}?readertype=offsite",
   "FOI1939Register": "/paidsearch/dsa1939register?readertype=offsite",
@@ -8,8 +14,10 @@
   "discoveryDeliveryOptionsStaffinPath": "/details/{0}/{1}?readertype=staffin",
   "offsiteDetailsPath": "/details/{0}/{1}?readertype=offsite",
   "cabinetPapersUrl": "http://test.nationalarchives.gov.uk/cabinetpapers/",
-  "googleDriverPath": "C:\\Users\\hparupalli\\chromedriver_win32\\",
+  //     C:\Users\hparupalli\chromeDriver_80
+  "googleDriverPath": "C:\\Users\\hparupalli\\chromedriver_80\\",
+  //"googleDriverPath": "C:\\Users\\hparupalli\\chromedriver_win32 (3)\\",
   "username": "tnadiscovery100@gmail.com",
-  "password": "Discovery12345",
-  "baseUrl": "https://cdev-discovery.nationalarchives.gov.uk"
+  "password": "Test1234",
+  "baseUrl": "https://test-discovery.nationalarchives.gov.uk"
 }
