--- a/DiscoveryBDDTest/appsettings.json
+++ b/DiscoveryBDDTest/appsettings.json
@@ -14,7 +14,7 @@
   "discoveryDeliveryOptionsStaffinPath": "/details/{0}/{1}?readertype=staffin",
   "offsiteDetailsPath": "/details/{0}/{1}?readertype=offsite",
   "cabinetPapersUrl": "http://test.nationalarchives.gov.uk/cabinetpapers/",
-  "googleDriverPath": "C:\\Users\\hparupalli\\chromedriver_80\\",
+  "googleDriverPath": "C:\\chromedriver-83.0\\",
   "username": "tnadiscovery100@gmail.com",
   "password": "Test1234",
   "baseUrl": "https://test-discovery.nationalarchives.gov.uk"
