path updated as generic

--- a/DiscoveryBDDTest/appsettings.json
+++ b/DiscoveryBDDTest/appsettings.json
@@ -18,6 +18,6 @@
   "username": "tnadiscovery100@gmail.com",
   "password": "Test1234",
   "baseUrl": "https://ctest-discovery.nationalarchives.gov.uk",
-  "Image1Path": "C:\\Users\\hparupalli\\Koala.jpg",
-  "Image2Path": " C:\\Users\\hparupalli\\Sample-500kb.jpg"
+  "Image1Path": "C:\\temp\\test-img\\Koala.jpg",
+  "Image2Path": "C:\\temp\\test-img\\Sample-500kb.jpg"
 }
