updated app settings

--- a/BasicSearchBrowseTest/BasicSearchBrowseTest.csproj
+++ b/BasicSearchBrowseTest/BasicSearchBrowseTest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\netcoreapp2.1\appsettings.json" />
     <Content Include="bin\Debug\netcoreapp2.1\BasicSearchBrowseTest.deps.json" />
     <Content Include="bin\Debug\netcoreapp2.1\BasicSearchBrowseTest.runtimeconfig.dev.json" />
     <Content Include="bin\Debug\netcoreapp2.1\BasicSearchBrowseTest.runtimeconfig.json" />
@@ -16,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="bin\Debug\netcoreapp2.1\appsettings.json" />
     <None Include="bin\Debug\netcoreapp2.1\BasicSearchBrowseTest.dll" />
     <None Include="bin\Debug\netcoreapp2.1\BasicSearchBrowseTest.pdb" />
     <None Include="bin\Debug\netcoreapp2.1\chromedriver.exe" />
