updated SSO tests

--- a/SSOTests/appsettings.json
+++ b/SSOTests/appsettings.json
@@ -20,5 +20,5 @@
   "baseUrl": "https://test-discovery.nationalarchives.gov.uk"
   // gmail account: tnatest595@gmail.com ,  Password: Test123456@
   // gmail account : tnadiscovery100@gmail.com , password : Discovery12345
-
+  // gmail account : discoveryt32@gmail.com, password : Test123456@
 }
