Updated SAR server and tags tests

--- a/ManorSearchTagsSARServerSubscriptionMoDMedalResearchOfficeTests/appsettings.json
+++ b/ManorSearchTagsSARServerSubscriptionMoDMedalResearchOfficeTests/appsettings.json
@@ -18,7 +18,7 @@
   "googleDriverPath": "C:\\Users\\hparupalli\\chromedriver_80\\",
   "username": "tnadiscovery100@gmail.com",
   "password": "Test123456",
-  "baseUrl": "https://test-discovery.nationalarchives.gov.uk",
+  "baseUrl": "https://ctest-discovery.nationalarchives.gov.uk",
   "Image1Path": "C:\\Users\\hparupalli\\Koala.jpg",
   "Image2Path": " C:\\Users\\hparupalli\\Sample-500kb.jpg"
 }
