--- a/DiscoveryBDDTest/appsettings.json
+++ b/DiscoveryBDDTest/appsettings.json
@@ -16,8 +16,8 @@
   "cabinetPapersUrl": "http://test.nationalarchives.gov.uk/cabinetpapers/",
   "googleDriverPath": "C:\\chromedriver-83.0\\",
   "username": "tnadiscovery100@gmail.com",
-  "password": "Test1234",
-  "baseUrl": "https://ctest-discovery.nationalarchives.gov.uk",
+  "password": "Test123456",
+  "baseUrl": "https://test-discovery.nationalarchives.gov.uk",
   "Image1Path": "C:\\temp\\test-img\\Koala.jpg",
   "Image2Path": "C:\\temp\\test-img\\Sample-500kb.jpg"
 }
