--- a/EcommerceAndDownloadNow/appsettings.json
+++ b/EcommerceAndDownloadNow/appsettings.json
@@ -15,10 +15,10 @@
   "discoveryDeliveryOptionsStaffinPath": "/details/{0}/{1}?readertype=staffin",
   "offsiteDetailsPath": "/details/{0}/{1}?readertype=offsite",
   "cabinetPapersUrl": "http://test.nationalarchives.gov.uk/cabinetpapers/",
-  "googleDriverPath": "C:\\Users\\hparupalli\\chromedriver_80\\",
+  "googleDriverPath": "C:\\chromedriver-83.0\\",
   "username": "tnadiscovery100@gmail.com",
   "password": "Test123456",
   "baseUrl": "https://test-discovery.nationalarchives.gov.uk",
-  "Image1Path": "C:\\Users\\hparupalli\\Koala.jpg",
-  "Image2Path": " C:\\Users\\hparupalli\\Sample-500kb.jpg"
+  "Image1Path": "C:\\temp\\test-img\\Koala.jpg",
+  "Image2Path": "C:\\temp\\test-img\\Sample-500kb.jpg"
 }
