Chrome Driver 87 in new branch

--- a/AdvancedSearchTest/appsettings.json
+++ b/AdvancedSearchTest/appsettings.json
@@ -14,8 +14,8 @@
   "discoveryDeliveryOptionsStaffinPath": "/details/{0}/{1}?readertype=staffin",
   "offsiteDetailsPath": "/details/{0}/{1}?readertype=offsite",
   "cabinetPapersUrl": "http://test.nationalarchives.gov.uk/cabinetpapers/",
-  "googleDriverPath": "C:\\chromedriver-83.0\\",
+  "googleDriverPath": "C:\\chromedriver-87.0\\",
   "username": "tnadiscovery100@gmail.com",
   "password": "Test123456",
-  "baseUrl": "https://test-discovery.nationalarchives.gov.uk"
+  "baseUrl": "https://ctest-discovery.nationalarchives.gov.uk"
 }
