paid search forms tests

--- a/DigitalDownloads/appsettings.json
+++ b/DigitalDownloads/appsettings.json
@@ -8,6 +8,7 @@
   "findAnArchive": "/find-an-archive",
   "pageCheckRequest": "/pagecheck/start/{0}?readertype=offsite",
   "FOIRequest": "/paidsearch/foirequest/{0}?readertype=offsite",
+  "1939RegisterFOI": "/paidsearch/foi1939register/",
   "FOI1939Register": "/paidsearch/dsa1939register?readertype=offsite",
   "discoveryPath": "?readertype=onsitepublic",
   "discoveryDetailsPath": "/details/{0}/{1}?readertype=onsitepublic",
