--- a/DiscoveryBDDTest/DiscoveryBDDTest.csproj
+++ b/DiscoveryBDDTest/DiscoveryBDDTest.csproj
@@ -5,58 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="BaseStep.cs" />
-    <Compile Remove="FeatureFiles\AS_AutoLookUp_OtherArchives.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_ClosureStatus_close_SpecificDate.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_ClosureStatus_Open_SpecificDate.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_ClosureStatus_PartiallyOpen_AnyTime.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_ClosureStatus_Retained_AnyTime.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_RecordCreator_CreatorType_CheckBox_Years.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_RecordCreator_CreatorType_DateRange.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Records_DateRange_SearchAll.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Records_SearchTNA_CatalogueLevel.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Records_SearchTNA_Reference_IncludeContent.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Records_SearchTNA_Taxonomy_Witchcraft.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Records_SpecificDate_SearchAll.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Reference_SearchAll.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_SearchOtherArchives.feature.cs" />
-    <Compile Remove="FeatureFiles\AS_Search_Find_DontFindWord.feature.cs" />
-    <Compile Remove="FeatureFiles\SearchWithExamples.feature.cs" />
-    <Compile Remove="SignOn.cs" />
-    <Compile Remove="StepDefinitions\AdvancedSearchhooks.cs" />
-    <Compile Remove="StepDefinitions\AS_AutoLookUp_OtherArchivesSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_ClosureStatus_Close_SpecificDateSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_ClosureStatus_Open_SpecificDateSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_ClosureStatus_PartiallyOpen_AnyTimeSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_ClosureStatus_Retained_AnyTimeSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_RecordCreator_CreatorType_CheckBox_YearsSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_RecordCreator_CreatorType_DateRangeSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_Records_DateRange_SearchAll.cs" />
-    <Compile Remove="StepDefinitions\AS_Records_SearchTNA_CatalogueLevelSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_Records_SearchTNA_Reference_IncludeContentSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_Records_SearchTNA_Taxonomy_WitchcraftSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_Records_SpecificDate_SearchAllSteps.cs" />
-    <Compile Remove="StepDefinitions\AS_Reference_SearchAllSteps.cs" />
-    <Compile Remove="StepDefinitions\SearchWithExamplesSteps.cs" />
+    <Compile Remove="FeatureFiles\**" />
+    <Compile Remove="StepDefinitions\**" />
+    <EmbeddedResource Remove="FeatureFiles\**" />
+    <EmbeddedResource Remove="StepDefinitions\**" />
+    <None Remove="FeatureFiles\**" />
+    <None Remove="StepDefinitions\**" />
+    <SpecFlowFeatureFiles Remove="FeatureFiles\**" />
+    <SpecFlowFeatureFiles Remove="StepDefinitions\**" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="FeatureFiles\**" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="StepDefinitions\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_AutoLookUp_OtherArchives.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_ClosureStatus_close_SpecificDate.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_ClosureStatus_Open_SpecificDate.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_ClosureStatus_PartiallyOpen_AnyTime.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_ClosureStatus_Retained_AnyTime.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_RecordCreator_CreatorType_CheckBox_Years.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_RecordCreator_CreatorType_DateRange.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Records_DateRange_SearchAll.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Records_SearchTNA_CatalogueLevel.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Records_SearchTNA_Reference_IncludeContent.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Records_SearchTNA_Taxonomy_Witchcraft.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Records_SpecificDate_SearchAll.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Reference_SearchAll.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_SearchOtherArchives.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\AS_Search_Find_DontFindWord.feature" />
-    <SpecFlowFeatureFiles Remove="FeatureFiles\SearchWithExamples.feature" />
+    <Compile Remove="BaseStep.cs" />
+    <Compile Remove="SignOn.cs" />
   </ItemGroup>
 
   <ItemGroup>
