--- a/EcommerceAndDownloadNow/appsettings.json
+++ b/EcommerceAndDownloadNow/appsettings.json
@@ -9,6 +9,9 @@
   "findAnArchive": "/find-an-archive",
   "pageCheckRequest": "/pagecheck/start/{0}?readertype=offsite",
   "FOIRequest": "/paidsearch/foirequest/{0}?readertype=offsite",
+  "1939RegisterFOI": "/paidsearch/foi1939register/",
+  "PoWSAR": "/paidsearch/dsarequest/{0}",
+  "closedRecordsRequest": "/foirequest?reference=WO%20416/178/416",
   "FOI1939Register": "/paidsearch/dsa1939register?readertype=offsite",
   "discoveryPath": "?readertype=onsitepublic",
   "discoveryDetailsPath": "/details/{0}/{1}?readertype=onsitepublic",
